# MotoGP_fantasy_league

./: .gitignore  2022-season-current-standings.txt  2022-season-member-data.txt  2022-season-rider-data.txt  CMakeLists.txt  program-data.txt  update_macos.sh
include/: Core.h  DynamicUi.h  Logger.h  Member.h  MemberList.h  MemberMenu.h  Menu.h  Rider.h  RiderManager.h  RiderManagerList.h  SeasonMenu.h  Util.h  error-message.h  member-list.h  member-menu.h  member-node.h  member.h  menu.h  name.h  race-result-list.h  race-result-scraper.h  race-result.h  race-results-menu.h  rider-list.h  rider-manager.h  rider-menu.h  rider-node.h  rider.h  season-menu.h  util.h
include/core/: Core.h  Logger.h
include/models/: Member.h  Rider.h  RiderManager.h  Season.h
include/ui/: MemberMenu.h  Menu.h  SeasonMenu.h
include/ui/DynamicUi/: DynamicUi.h  LimitedSelectionUi.h  MemberSelectorUi.h  MultipleSelectionUi.h  RidersSelectorUi.h  SingleSelectionUi.h  Window.h
include/ui/DynamicUi/DynamicUiElement/: BaseUiElement.h  SingleSelectionUiElement.h
include/utils/: Util.h
include/views/: MemberList.h  RiderManagerList.h
src/: Core.cpp  DynamicUi.cpp  Logger.cpp  Member.cpp  MemberList.cpp  MemberMenu.cpp  Menu.cpp  Rider.cpp  RiderManager.cpp  RiderManagerList.cpp  SeasonMenu.cpp  Util.cpp  error-message.cpp  main.cpp  member-list.cpp  member-menu.cpp  member-node.cpp  member.cpp  menu.cpp  name.cpp  race-result-list.cpp  race-result-scraper.cpp  race-result.cpp  race-results-menu.cpp  rider-list.cpp  rider-manager.cpp  rider-menu.cpp  rider-node.cpp  rider.cpp  season-menu.cpp  util.cpp
src/core/: Core.cpp  Logger.cpp
src/models/: Member.cpp  Rider.cpp  RiderManager.cpp  Season.cpp
src/ui/: MemberMenu.cpp  Menu.cpp  SeasonMenu.cpp
src/ui/DynamicUi/: DynamicUi.cpp  LimitedSelectionUi.cpp  MemberSelectorUi.cpp  MultipleSelectionUi.cpp  RidersSelectorUi.cpp  SingleSelectionUi.cpp
src/ui/DynamicUi/DynamicUiElement/: BaseUiElement.cpp  SingleSelectionUiElement.cpp
src/utils/: Util.cpp
src/views/: MemberList.cpp  RiderManagerList.cpp
